--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-firestore:17.1.3'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
     implementation 'com.facebook.android:facebook-login:4.38.1'
 
     implementation 'com.shuhart.stepview:stepview:1.4.0'
