--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,10 @@
         <activity android:name=".activity.GetMemberTypeActivity" />
         <activity android:name=".activity.RequestListVolunteerActivity" />
         <activity android:name=".activity.RequestListDisabledActivity" />
-        <activity android:name=".activity.AddRequestActivity" />
+
+        <activity
+            android:name=".activity.AddRequestActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden" />
 
         <meta-data
             android:name="com.google.android.gms.version"
