--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:4.38.1'
 
     implementation 'com.shuhart.stepview:stepview:1.4.0'
+    implementation 'com.github.arimorty:floatingsearchview:2.1.1'
+
+    implementation project(':geofirestore')
 }
 
 apply plugin: 'com.google.gms.google-services'
