--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
     <application
@@ -28,8 +29,8 @@
         </activity>
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.GetMemberTypeActivity" />
-        <activity android:name=".activity.RequestListVolunteerActivity" />
-        <activity android:name=".activity.RequestListDisabledActivity" />
+        <activity android:name=".activity.VolunteerMainActivity" />
+        <activity android:name=".activity.DisabledMainActivity" />
 
         <activity
             android:name=".activity.AddRequestActivity"
