--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,9 @@
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
             android:screenOrientation="sensorPortrait" />
 
+        <activity android:name=".activity.MapViewActivity"
+            android:screenOrientation="sensorPortrait" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
