Fixed search bar and finished filter design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,9 @@
         <activity android:name=".activity.MapViewActivity"
             android:screenOrientation="sensorPortrait" />
 
+        <activity android:name=".activity.FilterActivity"
+            android:screenOrientation="sensorPortrait" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
